--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,13 @@
-<!--
+<!-- 
   <li>
     <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs">
       <i class="fas fa-fw" aria-hidden="true"></i> Custom Social Profile Link
     </a>
+  </li> -->
+
+
+  <li>
+    <a href="https://www.researchgate.net/profile/Meysam-Asgari-2" itemprop="sameAs">
+      <i class="fas fa-fw" aria-hidden="true"></i> researchgate
+    </a>
   </li>
--->
