add new custom links

--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -8,6 +8,12 @@
 
   <li>
     <a href="https://www.researchgate.net/profile/Meysam-Asgari-2" itemprop="sameAs">
-      <i class="fas fa-fw" aria-hidden="true"></i> researchgate
+      <i class="fab fa-researchgate" aria-hidden="true"></i> Researchgate
+    </a>
+  </li>
+
+  <li>
+    <a href="https://scholar.google.com/citations?hl=en&user=lorQE_AAAAAJ" itemprop="sameAs">
+      <i class="fa-brands fa-google-scholar" aria-hidden="true"></i> Google Scholar
     </a>
   </li>
