--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -14,6 +14,6 @@
 
   <li>
     <a href="https://scholar.google.com/citations?hl=en&user=lorQE_AAAAAJ" itemprop="sameAs">
-      <i class="fa-brands fa-google-scholar" aria-hidden="true"></i> Google Scholar
+      <i class="fab fa-google-scholar" aria-hidden="true"></i> Google Scholar
     </a>
   </li>
